# volaris-gui

./: .gitignore  LICENSE  README.md  com.leohanney.Volaris.desktop  flatpak.xml  flatpak.yml  jsconfig.json  license  package.json  pnpm-lock.yaml  svelte.config.js
.github/workflows/: main.yml  release.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/routes/: +page.svelte  PasswordPrompt.svelte
